# image-voxel-reconstruction

./: .cproject  .gitignore  .project  CMakeLists.txt  Readme.txt  resource.h
data/cam1/: boardcorners.xml  config.xml  intrinsics.xml
data/cam2/: boardcorners.xml  config.xml  intrinsics.xml
data/cam3/: boardcorners.xml  config.xml  intrinsics.xml
data/cam4/: boardcorners.xml  config.xml  intrinsics.xml
src/: VoxelReconstruction.cpp  VoxelReconstruction.h  main.cpp
src/controllers/: BlendImages.cpp  BlendImages.h  Camera.cpp  Camera.h  Glut.cpp  Glut.h  Reconstructor.cpp  Reconstructor.h  Scene3DRenderer.cpp  Scene3DRenderer.h  arcball.cpp  arcball.h
src/utilities/: Calibration.cpp  Calibration.h  General.cpp  General.h  config.xml
x64/Debug/: scene3drenderer.new.obj.enc  vc142.idb
x64/Debug/VoxelRec.D024333B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  VoxelReconstruction.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
